--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </div>
             </div>
             <div class="mt-8 pt-8">
-                <div class="flex">
+                <div class="flex flex-row sm:flex-col md:flex-col lg:flex-row">
                     <div class="flex flex-col justify-start mb-3 pb-b">
                         <h1 class="font-serif text-9xl font-semibold text-white p-4 m-2">
                             True version control for Sketch files
@@ -39,8 +39,8 @@
                             </ul>
                         </div>
                     </div>
-                    <div>
-                        <img class="cover" src="assets/img/hero.png" alt="">
+                    <div class="size-fit">
+                        <img class="w-full h-full cover" src="assets/img/hero.png" alt="">
                     </div>
                 </div>
             </div>
