--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <head>
-        <nav class="bg-black">
+        <nav class="bg-black rounded-b-3xl">
             <div class="bg-black flex justify-between mb-5">
                 <div class="size-48 m-5 p-3">
                     <a href="#"><img class="cover" src="assets/img/Abstract_Wordmark-White.svg" alt=""></a>
@@ -19,32 +19,109 @@
                 </div>
             </div>
             <div class="mt-8 pt-8">
-                <div class="flex flex-row sm:flex-col md:flex-col lg:flex-row">
-                    <div class="flex flex-col justify-start mb-3 pb-b">
-                        <h1 class="font-serif text-9xl font-semibold text-white p-4 m-2">
-                            True version control for Sketch files
-                        </h1>
-                        <div class="m-4 p-4 flex justify-start">
-                            <button class="bg-indigo-500 text-white w-auto m-2 p-2 rounded-md text-xl font-bold hover:bg-indigo-800 transition duration-300" type="button">Start trial</button>
-                            <button class="border border-2 w-auto m-2 p-2 rounded-md text-white text-xl font-bold hover:bg-white hover:text-black transition duration-300" type="button">Download</button>
-                        </div>
-                        <div class="m-2 p-4">
-                            <h2 class="text-white text-2xl ml-5">1 in 3 Fortune 500 companies use Sketch + Abstract</h2>
-                            <ul class="flex m-3 p-1">
-                                <li class="m-2 p-2"><img src="/assets/img/logo-wayfair.svg" alt=""></li>
-                                <li class="m-2 p-2"><img src="/assets/img/logo-cisco.svg" alt=""></li>
-                                <li class="m-2 p-2"><img src="/assets/img/logo-docusign.svg" alt=""></li>
-                                <li class="m-2 p-2"><img src="/assets/img/logo-microsoft.svg" alt=""></li>
-                                <li class="m-2 p-2"><img src="/assets/img/logo-zendesk.svg" alt=""></li>
-                            </ul>
-                        </div>
+                <div class="flex flex-col lg:flex-row">
+                  <!-- Text Content -->
+                  <div class="flex flex-col justify-start mb-3 pb-4 flex-1">
+                    <h1 class="text-4xl sm:text-5xl md:text-6xl lg:text-7xl font-serif font-semibold text-white p-4 m-2">
+                      True version control for Sketch files
+                    </h1>
+                    <div class="m-4 p-4 flex justify-start flex-wrap">
+                      <button class="bg-indigo-500 text-white m-2 p-2 rounded-md text-lg md:text-xl font-bold hover:bg-indigo-800 transition duration-300" type="button">Start trial</button>
+                      <button class="border border-2 m-2 p-2 rounded-md text-white text-lg md:text-xl font-bold hover:bg-white hover:text-black transition duration-300" type="button">Download</button>
                     </div>
-                    <div class="size-fit">
-                        <img class="w-full h-full cover" src="assets/img/hero.png" alt="">
+                    <div class="m-2 p-4">
+                      <h2 class="text-white text-lg md:text-2xl ml-5">1 in 3 Fortune 500 companies use Sketch + Abstract</h2>
+                      <ul class="flex flex-wrap justify-start m-3 p-1">
+                        <li class="m-2 p-2"><img class="w-16 md:w-24" src="/assets/img/logo-wayfair.svg" alt=""></li>
+                        <li class="m-2 p-2"><img class="w-16 md:w-24" src="/assets/img/logo-cisco.svg" alt=""></li>
+                        <li class="m-2 p-2"><img class="w-16 md:w-24" src="/assets/img/logo-docusign.svg" alt=""></li>
+                        <li class="m-2 p-2"><img class="w-16 md:w-24" src="/assets/img/logo-microsoft.svg" alt=""></li>
+                        <li class="m-2 p-2"><img class="w-16 md:w-24" src="/assets/img/logo-zendesk.svg" alt=""></li>
+                      </ul>
                     </div>
+                  </div>
+                  <!-- Image Content -->
+                  <div class="flex-1">
+                    <img class="w-full h-auto object-cover" src="assets/img/hero.png" alt="">
+                  </div>
+                </div>
+              </div>
+              
+        </nav>
+        <section class="bg-purple-200 flex flex-col items-center pt-8 rounded-b-3xl">
+            <div class="size-3/4 justify-start mt-8 border-t-2 border-b-2 border-indigo-500 mb-9 ">
+                <h2 class="text-6xl sm:text-8xl font-serif text-left  p-1">
+                    Design collaboration
+                </h2>
+                <h2 class="text-6xl sm:text-8xl font-serif text-left decoration-purple-500 decoration-1 p-1 border-t-2 border-indigo-500">
+                    shouldn't be extra work
+                </h2>
+            </div>
+            <div class="flex flex-col sm:flex-row justify-center items-start w-full mb-8">
+                <div class="w-full w-1/3 m-2 p-2">
+                    <img class="size-20 m-2" src="assets/img/ico-clock.svg" alt="">
+                    <h3 class="text-xl font-bold m-2">Less files. More flow.</h3>
+                    <p class="m-2 text-lg font-semibold">No more digging through Dropbox and Google Drive. Always know where to find “the latest,” so you can stay in your design flow.</p>
+                </div>
+                <div class="w-full w-1/3 m-2 p-2">
+                    <img class="size-20 m-2" src="assets/img/ico-plant.svg" alt="">
+                    <h3 class="text-xl font-bold m-2">Design together, in real time.</h3>
+                    <p class="m-2 text-lg font-semibold">Explore and iterate in the same file at the same time, without losing the original. Simply create a branch, do your thing, then merge your changes when ready.</p>
+                </div>
+                <div class="w-full  w-1/3 m-2 p-2">
+                    <img class="size-20 m-2" src="assets/img/ico-sync.svg" alt="">
+                    <h3 class="text-xl font-bold m-2">Iterate with context.</h3>
+                    <p class="m-2 text-lg font-semibold">Know who made changes, when, and why. Compare changes side by side, resolve design conflicts, and merge work with precision.</p>
                 </div>
             </div>
-        </nav>
+        </section>
     </head>
+    <main>
+        <div class="mt-8 pt-8 pb-8 mb-9">
+            <div class="w-full">
+                <h2 class="text-4xl sm:text-7xl font-bold text-center mt-8 pt-8 pb-8 mb-9">
+                    Why design teams love Abstract<sup class="text-base align-super">®</sup>
+                  </h2>
+            </div>
+            <div class="flex flex-col space-y-4 sm:flex-row m-8 justify-between md:space-y-0 mt-8 pt-8">
+                <div class="w-full max-w-md flex flex-col justify-center border-2 border-black flex-wrap hover:shadow-[10px_10px_0_0_rgba(0,0,0,1)] hover:-translate-x-2 hover:-translate-y-2 transition duration-300">
+                   <div class="bg-amber-100 flex justify-center">
+                    <img class="size-56 m-2 p-2" src="assets/img/600840be3b2fd0583f72fe58_logo-cisco-black.svg" alt="">
+                   </div>
+                   <div class="flex justify-between h-32 items-center">
+                    <div class="border-2 border-r border-l-0 border-black w-full h-full flex justify-center items-center text-center"><h2 class="text-2xl font-bold">Design system management</h2></div>
+                    <div class="border-2 border-l border-r-0 border-black w-full h-full flex justify-center items-center text-center"><p class="font-semibold p-4 text-left">How Cisco built an enterprise global design system</p></div>
+                   </div>
+                   <div class="border-2 border-t-0 border-l-0 border-r-0 border-b-0 border-black text-center p-2">
+                    <a class="text-xl font-semibold m-2 p-4 underline text-indigo-500 hover:no-underline transition duration-300" href="#">Read Cisco's Story</a>
+                   </div> 
+                </div>
+                <div class="w-full max-w-md flex flex-col justify-center border-2 border-black flex-wrap hover:shadow-[10px_10px_0_0_rgba(0,0,0,1)] hover:-translate-x-2 hover:-translate-y-2 transition duration-300">
+                    <div class="bg-amber-100 flex justify-center">
+                     <img class="size-56 m-2 p-2" src="assets/img/logo-sf-black.svg" alt="">
+                    </div>
+                    <div class="flex justify-between h-32 items-center">
+                     <div class="border-2 border-r border-l-0 border-black w-full h-full flex justify-center items-center text-center"><h2 class="text-2xl font-bold">Radical transparency</h2></div>
+                     <div class="border-2 border-l border-r-0 border-black w-full h-full flex justify-center items-center text-center"><p class="font-semibold p-4 text-left">How designers at Salesforce fostered trust and teamwork</p></div>
+                    </div>
+                    <div class="border-2 border-t-0 border-l-0 border-r-0 border-b-0 border-black text-center p-2">
+                     <a class="text-xl font-semibold m-2 p-4 underline text-indigo-500 hover:no-underline transition duration-300" href="#">Read Salesforce's Story</a>
+                    </div> 
+                 </div>
+                 <div class="w-full max-w-md flex flex-col justify-center border-2 border-black flex-wrap hover:shadow-[10px_10px_0_0_rgba(0,0,0,1)] hover:-translate-x-2 hover:-translate-y-2 transition duration-300">
+                    <div class="bg-amber-100 flex justify-center">
+                     <img class="size-56 m-2 p-2" src="assets/img/logo-bh-black.svg" alt="">
+                    </div>
+                    <div class="flex justify-between h-32 items-center">
+                     <div class="border-2 border-r border-l-0 border-black w-full h-full flex justify-center items-center text-center"><h2 class="text-2xl font-bold">Remote collaboration</h2></div>
+                     <div class="border-2 border-l border-r-0 border-black w-full h-full flex justify-center items-center text-center"><p class="font-semibold p-4 text-left">How Banner Health is navigating the remote future no one planned for</p></div>
+                    </div>
+                    <div class="border-2 border-t-0 border-l-0 border-r-0 border-b-0 border-black text-center p-2">
+                     <a class="text-xl font-semibold m-2 p-4 underline text-indigo-500 hover:no-underline transition duration-300" href="#">Read Banner Health's Story</a>
+                    </div> 
+                 </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
