--- a/index.html
+++ b/index.html
@@ -77,51 +77,164 @@
         </section>
     </head>
     <main>
-        <div class="mt-8 pt-8 pb-8 mb-9">
-            <div class="w-full">
-                <h2 class="text-4xl sm:text-7xl font-bold text-center mt-8 pt-8 pb-8 mb-9">
-                    Why design teams love Abstract<sup class="text-base align-super">®</sup>
-                  </h2>
-            </div>
-            <div class="flex flex-col space-y-4 sm:flex-row m-8 justify-between md:space-y-0 mt-8 pt-8">
-                <div class="w-full max-w-md flex flex-col justify-center border-2 border-black flex-wrap hover:shadow-[10px_10px_0_0_rgba(0,0,0,1)] hover:-translate-x-2 hover:-translate-y-2 transition duration-300">
-                   <div class="bg-amber-100 flex justify-center">
-                    <img class="size-56 m-2 p-2" src="assets/img/600840be3b2fd0583f72fe58_logo-cisco-black.svg" alt="">
-                   </div>
-                   <div class="flex justify-between h-32 items-center">
-                    <div class="border-2 border-r border-l-0 border-black w-full h-full flex justify-center items-center text-center"><h2 class="text-2xl font-bold">Design system management</h2></div>
-                    <div class="border-2 border-l border-r-0 border-black w-full h-full flex justify-center items-center text-center"><p class="font-semibold p-4 text-left">How Cisco built an enterprise global design system</p></div>
-                   </div>
-                   <div class="border-2 border-t-0 border-l-0 border-r-0 border-b-0 border-black text-center p-2">
-                    <a class="text-xl font-semibold m-2 p-4 underline text-indigo-500 hover:no-underline transition duration-300" href="#">Read Cisco's Story</a>
-                   </div> 
+        <section>
+            <div class="mt-8 pt-8 pb-8 mb-9">
+                <div class="w-full">
+                    <h2 class="text-4xl sm:text-7xl font-bold text-center mt-8 pt-8 pb-8 mb-9">
+                        Why design teams love Abstract<sup class="text-base align-super">®</sup>
+                      </h2>
                 </div>
-                <div class="w-full max-w-md flex flex-col justify-center border-2 border-black flex-wrap hover:shadow-[10px_10px_0_0_rgba(0,0,0,1)] hover:-translate-x-2 hover:-translate-y-2 transition duration-300">
-                    <div class="bg-amber-100 flex justify-center">
-                     <img class="size-56 m-2 p-2" src="assets/img/logo-sf-black.svg" alt="">
+                <div class="flex flex-col space-y-4 sm:flex-row m-8 justify-between md:space-y-0 mt-8 pt-8">
+                    <div class="w-full max-w-md flex flex-col justify-center border-2 border-black flex-wrap hover:shadow-[10px_10px_0_0_rgba(0,0,0,1)] hover:-translate-x-2 hover:-translate-y-2 transition duration-300">
+                       <div class="bg-amber-100 flex justify-center">
+                        <img class="size-56 m-2 p-2" src="assets/img/600840be3b2fd0583f72fe58_logo-cisco-black.svg" alt="">
+                       </div>
+                       <div class="flex justify-between h-32 items-center">
+                        <div class="border-2 border-r border-l-0 border-black w-full h-full flex justify-center items-center text-center"><h2 class="text-2xl font-bold">Design system management</h2></div>
+                        <div class="border-2 border-l border-r-0 border-black w-full h-full flex justify-center items-center text-center"><p class="font-semibold p-4 text-left">How Cisco built an enterprise global design system</p></div>
+                       </div>
+                       <div class="border-2 border-t-0 border-l-0 border-r-0 border-b-0 border-black text-center p-2">
+                        <a class="text-xl font-semibold m-2 p-4 underline text-indigo-500 hover:no-underline transition duration-300" href="#">Read Cisco's Story</a>
+                       </div> 
                     </div>
-                    <div class="flex justify-between h-32 items-center">
-                     <div class="border-2 border-r border-l-0 border-black w-full h-full flex justify-center items-center text-center"><h2 class="text-2xl font-bold">Radical transparency</h2></div>
-                     <div class="border-2 border-l border-r-0 border-black w-full h-full flex justify-center items-center text-center"><p class="font-semibold p-4 text-left">How designers at Salesforce fostered trust and teamwork</p></div>
+                    <div class="w-full max-w-md flex flex-col justify-center border-2 border-black flex-wrap hover:shadow-[10px_10px_0_0_rgba(0,0,0,1)] hover:-translate-x-2 hover:-translate-y-2 transition duration-300">
+                        <div class="bg-teal-100 flex justify-center">
+                         <img class="size-56 m-2 p-2" src="assets/img/logo-sf-black.svg" alt="">
+                        </div>
+                        <div class="flex justify-between h-32 items-center">
+                         <div class="border-2 border-r border-l-0 border-black w-full h-full flex justify-center items-center text-center"><h2 class="text-2xl font-bold">Radical transparency</h2></div>
+                         <div class="border-2 border-l border-r-0 border-black w-full h-full flex justify-center items-center text-center"><p class="font-semibold p-4 text-left">How designers at Salesforce fostered trust and teamwork</p></div>
+                        </div>
+                        <div class="border-2 border-t-0 border-l-0 border-r-0 border-b-0 border-black text-center p-2">
+                         <a class="text-xl font-semibold m-2 p-4 underline text-indigo-500 hover:no-underline transition duration-300" href="#">Read Salesforce's Story</a>
+                        </div> 
+                     </div>
+                     <div class="w-full max-w-md flex flex-col justify-center border-2 border-black flex-wrap hover:shadow-[10px_10px_0_0_rgba(0,0,0,1)] hover:-translate-x-2 hover:-translate-y-2 transition duration-300">
+                        <div class="bg-violet-100 flex justify-center">
+                         <img class="size-56 m-2 p-2" src="assets/img/logo-bh-black.svg" alt="">
+                        </div>
+                        <div class="flex justify-between h-32 items-center">
+                         <div class="border-2 border-r border-l-0 border-black w-full h-full flex justify-center items-center text-center"><h2 class="text-2xl font-bold">Remote collaboration</h2></div>
+                         <div class="border-2 border-l border-r-0 border-black w-full h-full flex justify-center items-center text-center"><p class="font-semibold p-4 text-left">How Banner Health is navigating the remote future no one planned for</p></div>
+                        </div>
+                        <div class="border-2 border-t-0 border-l-0 border-r-0 border-b-0 border-black text-center p-2">
+                         <a class="text-xl font-semibold m-2 p-4 underline text-indigo-500 hover:no-underline transition duration-300" href="#">Read Banner Health's Story</a>
+                        </div> 
+                     </div>
+                </div>
+            </div>
+        </section>
+        <section class="bg-[#f6f7f7] mt-8">
+            <div class="bg-[#f6f7f7] mt-8">
+                <div class="flex justify-center flex-col items-center align-center mt-8 pt-9 ">
+                    <h2 class="text-7xl text-center">Dedicated to product designers</h2>
+                    <div class="flex justify-center m-2 p-2">
+                        <h3 class="text-3xl line-clamp-2 w-3/4 text-center text-center font-semibold">Get inspired by stories and resources from the best product design leaders and teams.</h3>
                     </div>
-                    <div class="border-2 border-t-0 border-l-0 border-r-0 border-b-0 border-black text-center p-2">
-                     <a class="text-xl font-semibold m-2 p-4 underline text-indigo-500 hover:no-underline transition duration-300" href="#">Read Salesforce's Story</a>
-                    </div> 
-                 </div>
-                 <div class="w-full max-w-md flex flex-col justify-center border-2 border-black flex-wrap hover:shadow-[10px_10px_0_0_rgba(0,0,0,1)] hover:-translate-x-2 hover:-translate-y-2 transition duration-300">
-                    <div class="bg-amber-100 flex justify-center">
-                     <img class="size-56 m-2 p-2" src="assets/img/logo-bh-black.svg" alt="">
+                </div>
+                <div class="flex flex-col space-y-4 sm:flex-row justify-between md:space-y-0 mt-8 pt-8 pb-8 p-4">
+                    <div class="w-full max-w-md h-full bg-white flex flex-col justify-center border-2 border-black flex-wrap hover:shadow-[10px_10px_0_0_rgba(0,0,0,1)] hover:-translate-x-2 hover:-translate-y-2 transition duration-300">
+                       <div class="bg-white flex justify-center">
+                        <img class="cover m-2 p-2" src="assets/img/UseCases_Present_Header.svg" alt="">
+                       </div>
+                       <div class="flex justify-between h-32 items-center">
+                        <div class="border-2 border-r border-l-0 border-black w-full h-full flex justify-center items-center text-center"><h2 class="text-2xl font-bold">Design Inspiration</h2></div>
+                        <div class="border-2 border-l border-r-0 border-black w-full h-full flex justify-center items-center text-center"><p class="font-semibold p-4 text-left">Scaling design ops, collaboration, and the impact of design</p></div>
+                       </div>
+                       <div class="border-2 border-t-0 border-l-0 border-r-0 border-b-0 border-black text-center p-2">
+                        <a class="text-xl font-semibold m-2 p-4 underline text-indigo-500 hover:no-underline transition duration-300" href="#">Get inspired</a>
+                       </div> 
                     </div>
-                    <div class="flex justify-between h-32 items-center">
-                     <div class="border-2 border-r border-l-0 border-black w-full h-full flex justify-center items-center text-center"><h2 class="text-2xl font-bold">Remote collaboration</h2></div>
-                     <div class="border-2 border-l border-r-0 border-black w-full h-full flex justify-center items-center text-center"><p class="font-semibold p-4 text-left">How Banner Health is navigating the remote future no one planned for</p></div>
-                    </div>
-                    <div class="border-2 border-t-0 border-l-0 border-r-0 border-b-0 border-black text-center p-2">
-                     <a class="text-xl font-semibold m-2 p-4 underline text-indigo-500 hover:no-underline transition duration-300" href="#">Read Banner Health's Story</a>
-                    </div> 
-                 </div>
+                    <div class="w-full max-w-md h-full bg-white flex flex-col justify-center border-2 border-black flex-wrap hover:shadow-[10px_10px_0_0_rgba(0,0,0,1)] hover:-translate-x-2 hover:-translate-y-2 transition duration-300">
+                        <div class="bg-black flex justify-center">
+                         <img class="object-cover w-full h-full" src="assets/img/how-we-use-notebooks-p-800.jpeg" alt="">
+                        </div>
+                        <div class="flex justify-between h-32 items-center">
+                         <div class="border-2 border-r border-l-0 border-black w-full h-full flex justify-center items-center text-center"><h2 class="text-2xl font-bold">Our Blog</h2></div>
+                         <div class="border-2 border-l border-r-0 border-black w-full h-full flex justify-center items-center text-center"><p class="font-semibold p-4 text-left">Stories, news, and tips from behind the Artboards</p></div>
+                        </div>
+                        <div class="border-2 border-t-0 border-l-0 border-r-0 border-b-0 border-black text-center p-2">
+                         <a class="text-xl font-semibold m-2 p-4 underline text-indigo-500 hover:no-underline transition duration-300" href="#">Browse Abstract's blog</a>
+                        </div> 
+                     </div>
+                     <div class="w-full max-w-md h-full bg-white flex flex-col justify-center border-2 border-black flex-wrap hover:shadow-[10px_10px_0_0_rgba(0,0,0,1)] hover:-translate-x-2 hover:-translate-y-2 transition duration-300">
+                        <div class="bg-white flex justify-center">
+                         <img class="cover w-full h-full" src="assets/img/og-blog-p-500.png" alt="">
+                        </div>
+                        <div class="flex justify-between h-32 items-center">
+                         <div class="border-2 border-r border-l-0 border-black w-full h-full flex justify-center items-center text-center"><h2 class="text-2xl font-bold">Remote collaboration</h2></div>
+                         <div class="border-2 border-l border-r-0 border-black w-full h-full flex justify-center items-center text-center"><p class="font-semibold p-4 text-left">How Banner Health is navigating the remote future no one planned for</p></div>
+                        </div>
+                        <div class="border-2 border-t-0 border-l-0 border-r-0 border-b-0 border-black text-center p-2">
+                         <a class="text-xl font-semibold m-2 p-4 underline text-indigo-500 hover:no-underline transition duration-300" href="#">Read Banner Health's Story</a>
+                        </div> 
+                     </div>
+                </div>
+            </div>
+        </section>
+        <section  class="bg-[#dadbf1] p-4 ">
+            <div class="bg-[#dadbf1] p-4 mb-8 pb-8">
+                <div>
+                    <h2 class="text-8xl text-center ">Level up your workflow</h2>
+                </div>
+                <div class="flex justify-center mt-8 m-3">
+                    <button class="bg-[#3d4caa] w-64 h-12 text-xl font-semibold text-white rounded-lg p-2 hover:bg-violet-900" type="button">View Pricing Planes</button>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="bg-black flex justify-between flex-wrap">
+        <div class="flex flex-col justify-center items-center m-2 p-2">
+            <div class="">
+                <div class="size-48 m-5 p-3">
+                    <a href="#"><img class="cover" src="assets/img/Abstract_Wordmark-White.svg" alt=""></a>
+                </div> 
+            </div>
+            <div>
+                <p class="hidden sm:block md:text-zinc-300 m-2 p-2"">
+                    © Copyright 2024 <br>
+                    Abstract Studio Design, Inc. <br>
+                    ‍All rights reserved
+                </p>
             </div>
         </div>
-    </main>
+        <div class="flex m-2 p-2 mr-5">
+            <div class=" m-2 p-2 mr-7">
+                <h3 class="text-white text-xl sm:text-3xl font-semibold">Resources</h3>
+                <ul class="text-zinc-300 text-base sm:text-xl">
+                    <li class=""><a class="hover:text-white" href="#">Blog</a></li>
+                    <li><a class="hover:text-white" href="#">Help Center</a></li>
+                    <li><a class="hover:text-white" href="#">Contact Support</a></li>
+                    <li><a class="hover:text-white" href="#">Release Notes</a></li>
+                    <li><a class="hover:text-white" href="#">Status</a></li>
+                </ul>
+            </div>
+            <div class="m-2 p-2">
+                <div>
+                    <h3 class="text-white text-xl sm:text-3xl font-semibold">Company</h3>
+                    <ul class="text-zinc-300 text-base sm:text-xl">
+                        <li class=""><a class="hover:text-white" href="#">About us</a></li>
+                        <li><a class="hover:text-white" href="#">Carrers</a></li>
+                        <li><a class="hover:text-white" href="#">Legal</a></li>
+                        <li><a class="hover:text-white" href="#">Privacy</a></li>
+                        <li><a class="hover:text-white" href="#">Website Terms of Use</a></li>
+                    </ul>
+                </div>
+                <div class="mt-5">
+                    <h3 class="text-white text-xl sm:text-3xl font-semibold">Contact Us</h3>
+                    <a class="text-zinc-300 text-base sm:text-xl hover:text-white" href="#">info@abstract.com</a>
+                </div>
+            </div>
+            <div class="m-2 p-2 ml-7">
+                <h3 class="text-white text-3xl font-semibold">Social</h3>
+                <ul class="text-zinc-300 text-base sm:text-xl">
+                    <li class=""><a class="hover:text-white" href="#">Twitter</a></li>
+                    <li><a class="hover:text-white" href="#">LinkedIn</a></li>
+                    <li><a class="hover:text-white" href="#">Facebook</a></li>
+                    <li><a class="hover:text-white" href="#">Dribbble</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
