--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <a href="#"><img class="cover" src="assets/img/Abstract_Wordmark-White.svg" alt=""></a>
                 </div>
                 <div class=" m-5 p-3">
-                    <h3 class="text-indigo-500 text-2xl font-semibold hover:text-indigo-800 transition duration-300"><a href="#">Sign in</a></h3>
+                    <h3 class="text-indigo-500 text-2xl font-semibold hover:text-indigo-800 transition duration-300"><a href="pages/login.html">Sign in</a></h3>
                 </div>
             </div>
             <div class="mt-8 pt-8">
