--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <div class="border-2 border-l border-r-0 border-black w-full h-full flex justify-center items-center text-center"><p class="font-semibold p-4 text-left">How Cisco built an enterprise global design system</p></div>
                        </div>
                        <div class="border-2 border-t-0 border-l-0 border-r-0 border-b-0 border-black text-center p-2">
-                        <a class="text-xl font-semibold m-2 p-4 underline text-indigo-500 hover:no-underline transition duration-300" href="#">Read Cisco's Story</a>
+                        <a class="text-xl font-semibold m-2 p-4 underline text-indigo-500 hover:no-underline transition duration-300" href="pages/cisco-blog.html">Read Cisco's Story</a>
                        </div> 
                     </div>
                     <div class="w-full max-w-md flex flex-col justify-center border-2 border-black flex-wrap hover:shadow-[10px_10px_0_0_rgba(0,0,0,1)] hover:-translate-x-2 hover:-translate-y-2 transition duration-300">
